--- a/barb.org
+++ b/barb.org
@@ -781,18 +781,62 @@ theorem less_than_of_equal_add_positive {n m : ℕ}
 #+end_src
 
 Here I did take a look at the proof sketch in the book
-([cite:@tao2022analysis p. 27]). I was able to prove on my own
+([cite:@tao2022analysis p. 27]). I was able to prove it on my own
 beforehand, but my proof was a really ugly double induction, and after
 a long time of trying to clean it up I felt like I was at the point
-where I could use some help.
-
-TODO:
+where I could use some help. Unfortunately, this proof is very long
+too! I would like to this proof as well.
 
 #+begin_src lean4
 theorem less_than_trichotomous (n m : ℕ) : n < m ∨ n = m ∨ n > m := by
   induction n with
-  | zero => sorry
-  | successor x ih => sorry
+  | zero => cases m with
+    | zero => exact Or.inr (Or.inl rfl)
+    | successor y =>
+      apply Or.inl
+      apply And.intro
+      . exact Exists.intro (successor y) (zero_add (successor y))
+      . exact (successor_not_equal_zero y).symm
+  | successor x ihl =>
+      cases ihl with
+      | inl h_less_than =>
+        let ⟨a, (h₁ : (successor x) + a = m)⟩ := successor_less_equal_of_less_than h_less_than
+        cases a with
+        | zero =>
+          apply Or.inr
+          apply Or.inl
+          exact calc
+            (successor x) = (successor x) + 0 := (add_zero (successor x)).symm
+            _             = m                 := h₁
+        | successor a' =>
+          apply Or.inl
+          apply less_than_of_equal_add_positive
+          apply Exists.intro (successor a')
+          apply And.intro
+          . exact successor_not_equal_zero a'
+          . exact h₁
+      | inr ihr => cases ihr with
+        | inl h_equal =>
+          apply Or.inr; apply Or.inr;
+          apply less_than_of_equal_add_positive
+          apply Exists.intro 1
+          apply And.intro
+          . exact successor_not_equal_zero 0
+          . exact calc
+              m + 1 = successor (m + 0) := add_successor m 0
+              _     = successor m       := congrArg successor (add_zero m)
+              _     = successor x       := congrArg successor h_equal.symm
+        | inr h_greater_than =>
+          let ⟨a, (h₁ : m + a = x)⟩ := h_greater_than.left
+          apply Or.inr; apply Or.inr;
+          have := calc
+            m + (successor a) = successor (m + a) := add_successor m a
+            _                 = successor x := congrArg successor h₁
+          apply less_than_of_equal_add_positive
+          apply Exists.intro (successor a)
+          apply And.intro
+          . exact successor_not_equal_zero a
+          . exact this
 #+end_src
 
 We follow the same pattern: eliminate the existential quantification,
