Multiplication is associative

--- a/barb.org
+++ b/barb.org
@@ -717,6 +717,8 @@ theorem less_than_transitive {n m k : ℕ} (h₁ : n < m) (h₂ : m < k) : n < k
     exact False.elim (h₁_not_equal this)
 #+end_src
 
+*** Ordering and Addition
+
 I have noticed that the lean tendency in mathlib is to split if and
 only if into two seperate theorems. This seems reasonable, especially
 because in my limited experience there usually isn't much shared code
@@ -1055,10 +1057,25 @@ theorem left_distributive (n m k : ℕ) : n * (m + k) = n * m + n * k := by
 
 theorem right_distributive (n m k : ℕ) : (n + m) * k = n * k + m * k := by
   calc
-    (n + m) * k = k * (n + m) := multiply_commutative (n + m) k
-    _ = k * n + k * m := left_distributive k n m
-    _ = n * k + k * m := congrArg (. + k * m) (multiply_commutative k n)
-    _ = n * k + m * k := congrArg (n * k + .) (multiply_commutative k m)
+    (n + m) * k = k * (n + m)   := multiply_commutative (n + m) k
+    _           = k * n + k * m := left_distributive k n m
+    _           = n * k + k * m := congrArg (. + k * m) (multiply_commutative k n)
+    _           = n * k + m * k := congrArg (n * k + .) (multiply_commutative k m)
+#+end_src
+
+#+begin_src lean4
+theorem multiply_associative (n m k : ℕ) : (n * m) * k = n * (m * k) := by
+  induction n with
+  | zero => calc
+    (0 * m) * k = 0 * k       := congrArg (. * k) (zero_multiply m)
+    _           = 0           := zero_multiply k
+    _           = 0 * (m * k) := (zero_multiply (m * k)).symm
+  | successor n ih => calc
+    (successor n * m) * k
+      = (n * m + m) * k       := congrArg (. * k) (successor_multiply n m)
+    _ = ((n * m) * k) + m * k := right_distributive (n * m) m k
+    _ = (n * (m * k)) + m * k := congrArg (. + m * k) ih
+    _ = successor n * (m * k) := successor_multiply n (m * k)
 #+end_src
 
 * COMMENT Local variables
