Multiplication preserves order

--- a/barb.org
+++ b/barb.org
@@ -1031,7 +1031,7 @@ theorem multiply_commutative (n m : ℕ) : n * m = m * n := by
 #+end_src
 
 #+begin_src lean4
-theorem equal_zero_of_multiply_equal_zero (n m : ℕ) : n * m = 0 → n = 0 ∨ m = 0 := by
+theorem equal_zero_of_multiply_equal_zero {n m : ℕ} : n * m = 0 → n = 0 ∨ m = 0 := by
   cases n with
   | zero =>
     intro _
@@ -1042,7 +1042,7 @@ theorem equal_zero_of_multiply_equal_zero (n m : ℕ) : n * m = 0 → n = 0 ∨ 
     have h₂ : (n * m) = 0 ∧ m = 0 := equal_zero_of_add_equal_zero h₁
     exact Or.inr h₂.right
 
-theorem multiply_equal_zero_of_equal_zero (n m : ℕ) : n = 0 ∨ m = 0 → n * m = 0 := by
+theorem multiply_equal_zero_of_equal_zero {n m : ℕ} : n = 0 ∨ m = 0 → n * m = 0 := by
   intro h
   cases h with
   | inl n_equal_zero => exact calc
@@ -1111,12 +1111,24 @@ theorem multiply_associative (n m k : ℕ) : (n * m) * k = n * (m * k) := by
 
 Multiplication preserves order (Proposition 2.3.6 in
 [cite:@tao2022analysis]). Why are we using $<$ here instead of $\le$ like
-we did for addition?
+we did for addition? I looked at the book proof for this one because I
+was in a hurry and could only think of an induction argument. Really
+slick proof from the book.
 
 #+begin_src lean4
-theorem multiply_left_less_than {m k : ℕ} (h_less_than : m < k) (n : ℕ) (h_positive : positive n) : n * m ≤ n * k := by
-  
+theorem multiply_left_less_than {m k : ℕ} (h_less_than : m < k) (n : ℕ) (h_n_positive : positive n) : n * m < n * k := by
+  let ⟨a, ⟨(h_a_positive : positive a), (h_exists : m + a = k)⟩⟩
+  := equal_add_positive_of_less_than h_less_than
+  apply less_than_of_equal_add_positive
+  apply Exists.intro (n * a)
+  apply And.intro
+  . show positive (n * a)
+    exact multiply_positive_of_and_positive (And.intro h_n_positive h_a_positive)
+  . calc
+    n * m + n * a = n * (m + a) := (left_distributive n m a).symm
+    _             = n * k       := congrArg (n * .) h_exists
 #+end_src
+
 * COMMENT Local variables
 # Local Variables:
 # eval: (add-hook 'after-save-hook (lambda () (org-babel-tangle)) nil t)
