Quotient remainder theorem

--- a/barb.org
+++ b/barb.org
@@ -782,6 +782,15 @@ theorem zero_less_than_successor (n : ℕ) : 0 < successor n := by
   . exact (successor_not_equal_zero n).symm
 #+end_src
 
+#+begin_src lean4
+theorem zero_less_than_positive {n : ℕ} : positive n → 0 < n := by
+  intro h_positive
+  let ⟨n', ⟨(h_predecessor : successor n' = n), _⟩⟩ := unique_predecessor_of_positive h_positive
+  calc
+    0 < successor n' := zero_less_than_successor n'
+    _ = n            := h_predecessor
+#+end_src
+
 *** Ordering and Addition
 
 I have noticed that the lean tendency in mathlib is to split if and
@@ -1229,7 +1238,7 @@ theorem quotient_remainder {n q : ℕ} (q_positive : positive q) :
       (equal_or_less_than_of_less_equal ∘ successor_less_equal_of_less_than) h_less_than
     cases this with
     | inl h_equal => 
-      apply Exists.intro ⟨(successor m), 0⟩
+      apply Exists.intro ⟨successor m, 0⟩
       apply And.intro
       . calc
           successor n = successor (m * q + r)         := congrArg successor h_exists
@@ -1237,25 +1246,15 @@ theorem quotient_remainder {n q : ℕ} (q_positive : positive q) :
           _           = m * successor r + successor r := congrArg (m * . + successor r) h_equal.symm
           _           = successor m * successor r     := (successor_multiply m (successor r)).symm
           _           = successor m * q               := congrArg (successor m * .) h_equal
-      . exact zero_less_than_successor m
-      -- have successor r = m
-      -- have n = m * q + r
-      -- need to show successor n = m * q + r ∧ r < m
-      -- (successor r) * q + r 
-      -- (r * q) + q + r
-      -- (r * q) + r + q
-      -- r * (successor q) + q
-      
-      -- m * (successor q) + 0
-    | inr h_less_than => sorry
-    -- have successor r = m
-    -- We need a theorem that says n ≤ m → (n = m) ∨ (n < m), and then also backwards prolly
-    -- Then do cases on that, what is written below is the second case
-    -- if q = (successor r), then q + 1, r = 0
-    -- apply Exists.intro ⟨q, (successor r)⟩
-    -- apply And.intro
-    -- . calc
-      -- successor n = successor (m * q + r) := congrArg successor h_exists
+          _           = successor m * q + 0           := (add_zero (successor m * q)).symm
+      . exact zero_less_than_positive q_positive
+    | inr h_less_than =>
+      apply Exists.intro ⟨m, successor r⟩
+      apply And.intro
+      . calc
+          successor n = successor (m * q + r) := congrArg successor h_exists
+          _ = m * q + successor r := (add_successor (m * q) r).symm
+      . exact h_less_than
 #+end_src
 
 * COMMENT Local variables
