--- a/barb.org
+++ b/barb.org
@@ -207,14 +207,14 @@ equality giving a result implies that we can give a proof of the
 propositional version.
 
 #+begin_src lean4
-theorem equal_of_boolean_equal_true : {n m : ℕ} → (booleanEqual n m) = true → n = m
+theorem equal_of_boolean_equal_true : {n m : ℕ} → (n == m) = true → n = m
   | zero, zero, _ => rfl
   | zero, successor _, h => Bool.noConfusion h
   | successor _, zero, h => Bool.noConfusion h
   | successor _, successor _, h => 
     congrArg successor (equal_of_boolean_equal_true h)
 
-theorem not_equal_of_boolean_equal_false : {n m : ℕ} → (booleanEqual n m) = false → n ≠ m
+theorem not_equal_of_boolean_equal_false : {n m : ℕ} → (n == m) = false → n ≠ m
   | zero, zero, h => Bool.noConfusion h
   | zero, successor x, _ => (successor_not_equal_zero x).symm
   | successor x, zero, _ => successor_not_equal_zero x
