--- a/barb.org
+++ b/barb.org
@@ -806,6 +806,53 @@ theorem successor_less_equal_successor {n m : ℕ} : n ≤ m → successor n ≤
 #+end_src
 
 #+begin_src lean4
+theorem less_than_of_successor_less_equal {n m : ℕ} (h : successor n ≤ m) : n < m := by
+  let ⟨x, (h₁ : (successor n) + x = m)⟩ := h
+  have h₂ := calc
+    n + (successor x) = successor (n + x) := add_successor n x
+    _                 = (successor n) + x := (successor_add n x).symm
+    _                 = m                 := h₁
+  apply And.intro
+  . exact (Exists.intro (successor x) h₂)
+  . show n ≠ m
+    intro (h₃ : n = m)
+    have := calc
+      n + (successor x) = m     := h₂
+      _                 = n     := h₃.symm
+      _                 = n + 0 := (add_zero n).symm
+    exact successor_not_equal_zero x (add_left_cancel this)
+
+theorem successor_less_equal_of_less_than : {n m : ℕ} → n < m → successor n ≤ m
+| zero, zero, ⟨_, h⟩ => False.elim (h rfl)
+| zero, successor y, _ => by
+  apply Exists.intro y
+  calc
+    successor zero + y = successor (zero + y) := successor_add zero y
+    _                  = successor y          := congrArg successor (zero_add y)
+| successor x, zero, ⟨h, _⟩ => by
+  let ⟨z, (h₁ : (successor x) + z = zero)⟩ := h
+  have : successor (x + z) = 0 := (successor_add x z).symm.trans h₁
+  exact False.elim (successor_not_equal_zero (x + z) this)
+| successor x, successor y, ⟨h₁, h₂⟩ => by
+  show successor (successor x) ≤ successor y
+  
+  suffices h₃ : x ≤ y ∧ x ≠ y by
+  { let ⟨w, (h₄ : (successor x) + w = y)⟩ := successor_less_equal_of_less_than h₃
+    have := calc
+      (successor (successor x)) + w = successor (successor x + w) := successor_add (successor x) w
+      _                             = successor y                 := congrArg successor h₄
+    exact Exists.intro w this }
+
+  let ⟨z, (h₄ : successor x + z = successor y)⟩ := h₁
+  apply And.intro
+  . have h₅ := calc
+      successor (x + z) = (successor x) + z := (successor_add x z).symm
+      _                 = successor y       := h₄
+    exact Exists.intro z (successor_injective h₅)
+  . exact mt (congrArg successor) h₂
+#+end_src
+
+#+begin_src lean4
 theorem zero_less_than_successor (n : ℕ) : 0 < successor n := by
   apply And.intro
   . exact Exists.intro (successor n) (zero_add (successor n)).symm
@@ -870,6 +917,11 @@ instance decideLessEqual (n m : ℕ) : Decidable (n ≤ m) :=
     (λ h => isFalse (not_less_equal_of_not_boolean_less_equal_true h))
 #+end_src
 
+#+begin_src lean4
+instance decideLessThan (n m : ℕ) : Decidable (n < m) :=
+  less_than_of_successor_less_equal (decideLessEqual (successor n) m)
+#+end_src
+
 *** Ordering and Addition
 
 I have noticed that the lean tendency in mathlib is to split if and
@@ -919,52 +971,6 @@ equivalent. The second proof is long and involved, and I would like to
 revisit it to see if I can make it more concise (preferably by finding
 a way to avoid the double induction).
 
-#+begin_src lean4
-theorem less_than_of_successor_less_equal {n m : ℕ} (h : successor n ≤ m) : n < m := by
-  let ⟨x, (h₁ : (successor n) + x = m)⟩ := h
-  have h₂ := calc
-    n + (successor x) = successor (n + x) := add_successor n x
-    _                 = (successor n) + x := (successor_add n x).symm
-    _                 = m                 := h₁
-  apply And.intro
-  . exact (Exists.intro (successor x) h₂)
-  . show n ≠ m
-    intro (h₃ : n = m)
-    have := calc
-      n + (successor x) = m     := h₂
-      _                 = n     := h₃.symm
-      _                 = n + 0 := (add_zero n).symm
-    exact successor_not_equal_zero x (add_left_cancel this)
-
-theorem successor_less_equal_of_less_than : {n m : ℕ} → n < m → successor n ≤ m
-| zero, zero, ⟨_, h⟩ => False.elim (h rfl)
-| zero, successor y, _ => by
-  apply Exists.intro y
-  calc
-    successor zero + y = successor (zero + y) := successor_add zero y
-    _                  = successor y          := congrArg successor (zero_add y)
-| successor x, zero, ⟨h, _⟩ => by
-  let ⟨z, (h₁ : (successor x) + z = zero)⟩ := h
-  have : successor (x + z) = 0 := (successor_add x z).symm.trans h₁
-  exact False.elim (successor_not_equal_zero (x + z) this)
-| successor x, successor y, ⟨h₁, h₂⟩ => by
-  show successor (successor x) ≤ successor y
-  
-  suffices h₃ : x ≤ y ∧ x ≠ y by
-  { let ⟨w, (h₄ : (successor x) + w = y)⟩ := successor_less_equal_of_less_than h₃
-    have := calc
-      (successor (successor x)) + w = successor (successor x + w) := successor_add (successor x) w
-      _                             = successor y                 := congrArg successor h₄
-    exact Exists.intro w this }
-
-  let ⟨z, (h₄ : successor x + z = successor y)⟩ := h₁
-  apply And.intro
-  . have h₅ := calc
-      successor (x + z) = (successor x) + z := (successor_add x z).symm
-      _                 = successor y       := h₄
-    exact Exists.intro z (successor_injective h₅)
-  . exact mt (congrArg successor) h₂
-#+end_src
 
 The final statement of Proposition 2.2.12
 ([cite:@tao2022analysis p. 27]) says that $n < m$ and $n + a = m$ for
